# github-big-proj5

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
bridgex/: README.md  pyproject.toml
bridgex/examples/: basic_usage.py
bridgex/src/bridgex/: __init__.py
bridgex/src/bridgex/agents/: __init__.py  manager.py
bridgex/src/bridgex/connectors/: __init__.py  manager.py
bridgex/src/bridgex/core/: engine.py  models.py  orchestrator.py
bridgex/src/bridgex/execution/: __init__.py  runtime.py
bridgex/src/bridgex/skills/: __init__.py  marketplace.py
bridgex/src/bridgex/trust/: __init__.py  verifier.py
bridgex/src/bridgex/utils/: __init__.py  exceptions.py
bridgex/tests/: test_all.py
src/api/: server.py
src/cli/: main.py
src/code_review/: core.py
src/context_mapper/: core.py
src/marketplace/: core.py
src/memory_mesh/: core.py
src/trust_engine/: core.py
src/universal_skill/: core.py
