[build-system]
requires = ["setuptools>=75.6.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trustchain"
version = "1.0.0"
description = "TrustChain — Universal AI Trust & Quality Infrastructure"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "lanekingkong", email = "lanekingkong@github.com"},
]
maintainers = [
    {name = "lanekingkong"},
]
keywords = [
    "ai", "trust", "code-review", "skills", "agent",
    "cross-platform", "marketplace", "memory", "context",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "grpcio>=1.65.0",
    "grpcio-tools>=1.65.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "chromadb>=0.5.0",
    "networkx>=3.3",
    "libcst>=1.4.0",
    "tree-sitter>=0.22.0",
    "bandit>=1.7.9",
    "safety>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "build>=1.2.0",
    "twine>=5.1.0",
]
all = [
    "trustchain[dev]",
    "langchain>=0.2.0",
    "openai>=1.35.0",
    "anthropic>=0.30.0",
]

[project.scripts]
trustchain = "trustchain.cli.main:cli"

[project.urls]
Homepage = "https://github.com/lanekingkong/trustchain"
Documentation = "https://github.com/lanekingkong/trustchain/blob/main/README.md"
Issues = "https://github.com/lanekingkong/trustchain/issues"
Changelog = "https://github.com/lanekingkong/trustchain/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"